# glitterin

./: LICENSE  README.md  pyproject.toml
examples/: example_1.py  example_read_training.py  example_read_visualization.py  time_nn.py
glitterin/: __init__.py  data.py  dust.py  network.py  toolkit.py  user.py
