[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glitterin"
version = "0.1.0"
authors = [
    {name = "Zhe-Yu Daniel Lin", email = "zlin@carnegiescience.edu"},
]
description = "User interface to using pytorch neural network trained on scattering of irregular grains."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["astronomy", "neural-networks", "pytorch", "machine-learning"]
dependencies = [
    "numpy>=2.2.4",
    "h5py>=3.13.0", 
    "torch>=2.6.0",
    "scikit-learn>=1.6.1",
]

[project.urls]
"Homepage" = "https://github.com/zheyudaniellin/glitterin"
"Bug Reports" = "https://github.com/zheyudaniellin/glitterin/issues"
"Source" = "https://github.com/zheyudaniellin/glitterin"
"Documentation" = "https://github.com/zheyudaniellin/glitterin#readme"

# Package discovery and data inclusion
[tool.setuptools.packages.find]
where = ["."]
include = ["glitterin*"]

[tool.setuptools.package-data]
glitterin = ["../assets/nnmodels/**/*"]

# Alternative way to include data files
[tool.setuptools.packages]
glitterin = "glitterin"

[tool.setuptools.package-dir]
glitterin = "glitterin"

# Include all files in assets directory
[tool.setuptools.data-files]
"glitterin/assets" = ["assets/**/*"]

