[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glitterin"
version = "1.0.0"
authors = [
    {name = "Zhe-Yu Daniel Lin", email = "dlin@nrao.edu"},
]
description = "User interface for using pytorch neural network trained on scattering of irregular grains through ADDA."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["astronomy", "neural-networks", "pytorch", "machine-learning"]
dependencies = [
    "numpy>=2.2.4",
    "h5py>=3.13.0", 
    "torch>=2.6.0",
    "scikit-learn>=1.6.1",
]

[project.urls]
"Homepage" = "https://github.com/zheyudaniellin/glitterin"
"Bug Reports" = "https://github.com/zheyudaniellin/glitterin/issues"
"Source" = "https://github.com/zheyudaniellin/glitterin"
"Documentation" = "https://github.com/zheyudaniellin/glitterin#readme"


